Needed to save at Exercise 3 still

--- a/index.html
+++ b/index.html
@@ -7,7 +7,83 @@
   </head>
   <body>
     <main>
-      <!-- Complete the Exercises HERE -->
+      <table>
+        <thead>
+        <tr>
+          <th>Drink</th>
+          <th>total servings</th>
+          <th>serving size</th>
+          <th>calories per serving</th>
+          <th>carbs per serving</th>
+          <th>sugars per serving</th>
+          <th>sodium per serving</th>
+        </tr>
+        </thead>
+        <tr>
+        <td>Coca Cola</td>
+        <td>1</td>
+        <td>12 fl oz</td>
+        <td>140</td>
+        <td>39g</td>
+        <td>39g</td>
+        <td>45mg</td>  
+        </tr>
+        <tr>
+          <td>Pepsi</td>
+          <td>1</td>
+          <td>12 fl oz</td>
+          <td>150</td>
+          <td>41g</td>
+          <td>41g</td>
+          <td>30mg</td>
+        </tr>
+        <tr>
+          <td>Coke Zero</td>
+          <td>1</td>
+          <td>12 fl oz</td>
+          <td>100</td>
+          <td>0</td>
+          <td>0</td>
+          <td>48mg</td>
+        </tr>
+        <tr>
+          <td>Dr.Pepper</td>
+          <td>1</td>
+          <td>12 fl oz</td>
+          <td>150</td>
+          <td>40g</td>
+          <td>40g</td>
+          <td>55mg</td>
+        </tr>
+        <tr>
+          <td>Mountain Dew</td>
+          <td>1</td>
+          <td>12 fl oz</td>
+          <td>170</td>
+          <td>46g</td>
+          <td>46g</td>
+          <td>60mg</td>
+        </tr>
+      </table>
+      
+        <form action="">
+        <label for="Drink Name"></label>
+        <input type="text" name="Drink Name" id="Drink Name">
+        <label for="total servings"></label>
+        <input type="text" name="total servings" id="total servings">
+        <label for="serving size"></label>
+        <input type="text" name="serving size" id="serving size">
+        <label for="calories per serving"></label>
+        <input type="text" name="calories per serving" id="calories per serving">
+        <label for="carbs per serving"></label>
+        <input type="text" name="carbs per serving" id="carbs per serving">
+        <label for="sugars per serving"></label>
+        <input type="text" name="sugars per serving" id="sugars per serving">
+        <label for="sodium per serving"></label>
+        <input type="text" name="sodium per serving" id="sodium per serving">
+
+        <button id="submit">Submit</button>
+      </form>
     </main>
   </body>
 </html>
