Adding CSS to make it look better

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>HTML Tables and Forms</title>
+    <link rel="stylesheet" href="">
   </head>
   <body>
     <main>
@@ -67,19 +68,19 @@
       </table>
       
         <form action="">
-        <label for="Drink Name"></label>
+        <label for="Drink Name">Drink Name</label>
         <input type="text" name="Drink Name" id="Drink Name">
-        <label for="total servings"></label>
+        <label for="total servings">Total Servings</label>
         <input type="text" name="total servings" id="total servings">
-        <label for="serving size"></label>
+        <label for="serving size">Serving sizes</label>
         <input type="text" name="serving size" id="serving size">
-        <label for="calories per serving"></label>
+        <label for="calories per serving">calories per serving</label>
         <input type="text" name="calories per serving" id="calories per serving">
-        <label for="carbs per serving"></label>
+        <label for="carbs per serving">carbs per serving</label>
         <input type="text" name="carbs per serving" id="carbs per serving">
-        <label for="sugars per serving"></label>
+        <label for="sugars per serving">sugars per serving</label>
         <input type="text" name="sugars per serving" id="sugars per serving">
-        <label for="sodium per serving"></label>
+        <label for="sodium per serving">sodium per serving</label>
         <input type="text" name="sodium per serving" id="sodium per serving">
 
         <button id="submit">Submit</button>
